delete:smart phone css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <link rel="shortcut icon" href="https://tik-choco.github.io/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="https://tik-choco.github.io/img/icon.png">
     <meta name="application-name" content="TikChoco Connect"/>
@@ -15,7 +16,6 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>TikChoco Connect</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="content-language" content="ja" />
     <meta name="description" content="「TikChoco Connect 」では、TikChoco制作の最新ゲーム情報をお届けいたします。" />
     <meta name="keywords" content="TikChocoConnect,TikChoco,TikChoco Connect,TikChoco Connect2023" />
@@ -118,14 +118,13 @@
         </div>
       </nav>
     </header>
-
-
+    <div class="top_slider">
     <div class="gallery js-flickity"
     data-flickity-options='{ "wrapAround": true }'>
     <div class="gallery-cell"><img src="img/vloid.png"></div>
     <div class="gallery-cell"><img src="https://img.youtube.com/vi/kJFBjG2eSuk/maxresdefault.jpg"></div>
     <div class="gallery-cell"><img src="img/SplashScreen.png"></div>
-  </div>
+  </div></div>
 
     <div class="wrapper">
 
