--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <meta name="expires" content="Novenbar 10, 1980" />
     <meta name="revisit-after" content="2 days" />
     <meta name="google" content="notranslate" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="css/top/import.css">
 
   </head>
@@ -209,5 +210,6 @@
   <script src="js/lib/flickity.pkgd.min.js" ></script>
   <script src="js/footer.js" ></script>
   <script src="js/main.js"></script>
+  <script src="js/top.js"></script>
   <script src="js/flickity.pkgd.min.js"></script>
 </html>
