--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <meta name="google" content="notranslate" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="css/top/import.css">
+    <link rel="stylesheet" href="/css/import.css">
 
   </head>
   <body>
