--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="js/page.js" ></script>
   <script src="js/lib/flickity.pkgd.min.js" ></script>
+  <script src='/js/cookie_notification.js'></script> 
   <script src="/js/footer.js" ></script>
   <script src="js/main.js"></script>
   <script src="js/top.js"></script>
