--- a/session.html
+++ b/session.html
@@ -23,6 +23,7 @@
   href="css/import.css"
   rel="stylesheet"
 />
+<link rel="stylesheet" href="/css/cookie.css">
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
@@ -167,7 +168,8 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   
   <!-- MDB -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/lib/mdb.min.js"></script>
+  <script src='/js/cookie_notification.js'></script> 
   <script type="text/javascript" src="js/footer.js"></script>
   <script src="js/videoLightning.js"></script>
   <script>
