--- a/speaker.html
+++ b/speaker.html
@@ -68,6 +68,7 @@
 href="css/speaker.css"
 rel="stylesheet"
 />
+<link rel="stylesheet" href="/css/cookie.css">
   </head>
 
   <body>
@@ -299,7 +300,8 @@ rel="stylesheet"
   </body>
 
   <!-- MDB -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/lib/mdb.min.js"></script>
+  <script src='/js/cookie_notification.js'></script> 
   <script type="text/javascript" src="js/footer.js"></script>
   <script type="text/javascript" src="js/top.js"></script>
 </html>
