--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://tik-choco.github.io/tikchoco-connect/css/mdb.min.css" />
     <!-- Custom styles -->
     <link rel="stylesheet" href="https://tik-choco.github.io/tikchoco-connect/css/404.css" />
+    <link rel="stylesheet" href="/css/cookie.css">
 </head>
 <body>
       <!--Main Navigation-->
@@ -150,7 +151,7 @@
   </footer>
   <!--Footer-->
     <!-- MDB -->
-    <script type="text/javascript" src="https://tik-choco.github.io/tikchoco-connect/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://tik-choco.github.io/tikchoco-connect/js/lib/mdb.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript" src="https://tik-choco.github.io/tikchoco-connect/js/footer.js"></script>
 </body>
