--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
     href="css/404.css"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="/css/cookie.css">
     <style>
       #intro {
         background-image: url(30015512-7ead-4a0c-aa67-a354a7e9c333.png);
@@ -172,7 +173,8 @@
   </footer>
   <!--Footer-->
     <!-- MDB -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script type="text/javascript" src="js/lib/mdb.min.js"></script>
+    <script src='/js/cookie_notification.js'></script> 
     <!-- Custom scripts -->
     <script type="text/javascript" src="js/script.js"></script>
 </body>
