--- a/community.html
+++ b/community.html
@@ -27,6 +27,7 @@
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
   ></script>
+  <link rel="stylesheet" href="/css/cookie.css">
   </head>
 
   <body>
@@ -200,6 +201,7 @@
   </body>
 
   <!-- MDB -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/lib/mdb.min.js"></script>
+  <script src='/js/cookie_notification.js'></script> 
   <script type="text/javascript" src="js/footer.js"></script>
 </html>
