--- a/title.html
+++ b/title.html
@@ -23,6 +23,7 @@
   href="css/import.css"
   rel="stylesheet"
 />
+<link rel="stylesheet" href="/css/cookie.css">
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
@@ -211,6 +212,7 @@
   </body>
 
   <!-- MDB -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/lib/mdb.min.js"></script>
+  <script src='/js/cookie_notification.js'></script> 
   <script type="text/javascript" src="js/footer.js"></script>
 </html>
