--- a/news.html
+++ b/news.html
@@ -81,6 +81,28 @@
       </nav>
 
         <section class="container my-3 p-3 text-center"><h2>News and Updates</h2></section>
+        <div class="container my-5 p-5 shadow-3">
+          <!--Section: Content 3-->
+          <section>
+            <div class="row">
+              <div class="col-md-6">
+                <img
+                  src="img/dashboard.png"
+                  class="img-fluid shadow-2-strong"
+                />
+              </div>
+              <div class="col-md-6">
+                <h3 class="mb-3">TikChocoOnline Dashboardを発表しました。</h3>
+                <p class="mb-4">
+                  「TikChoco Online　Dashboard」は、TikChoco Onlineを遊ぶ上でフレンドを探したり、ゲーム内の課金などを行ったりするダッシュボードです。
+    
+                </p>
+                <a type="button" class="btn btn-primary" href="https://tik-choco.github.io/app/main">ダッシュボードへ</a>
+              </div>
+            </div>
+          </section>
+          <!--Section: Content 3-->
+        </div>
 
         <div class="container my-5 p-5 shadow-3">
           <!--Section: Content 3-->
