--- a/session.html
+++ b/session.html
@@ -89,21 +89,21 @@
 
           <div class="row">
               <div class="bg-image  mb-4 shadow-1-strong rounded">
-                <!-- <span class="video-link demo-link" data-video-id="a2QT-10UuM8"><img
+                <span class="video-link demo-link" data-video-id="a2QT-10UuM8"><img
                   src="https://img.youtube.com/vi/a2QT-10UuM8/maxresdefault.jpg"
                   class="img-fluid shadow-2-strong"
-                /></span> -->
+                /></span>
                 <!-- <a href="#!">
                   
                   <div class="mask"></div>
                 </a> -->
-                <div class="ratio ratio-16x9">
+                <!-- <div class="ratio ratio-16x9">
                   <iframe
                     src="https://www.youtube.com/embed/a2QT-10UuM8?autoplay=1;"
                     title="YouTube video"
                     allowfullscreen
                   ></iframe>
-                </div>
+                </div> -->
               </div>
               <h5 class="mb-3">第2回TikChoco Connect</h5>
               <p class="mb-4">
