--- a/session.html
+++ b/session.html
@@ -89,35 +89,51 @@
 
           <div class="row">
               <div class="bg-image  mb-4 shadow-1-strong rounded">
-                <span class="video-link demo-link" data-video-id="a2QT-10UuM8"><img
+                <!-- <span class="video-link demo-link" data-video-id="3tT6VyJ0taI"><img
                   src="https://img.youtube.com/vi/a2QT-10UuM8/maxresdefault.jpg"
                   class="img-fluid shadow-2-strong"
-                /></span>
+                /></span> -->
                 <!-- <a href="#!">
                   
                   <div class="mask"></div>
                 </a> -->
-                <!-- <div class="ratio ratio-16x9">
+                <div class="ratio ratio-16x9">
                   <iframe
-                    src="https://www.youtube.com/embed/a2QT-10UuM8?autoplay=1;"
+                    src="https://www.youtube.com/embed/3tT6VyJ0taI?autoplay=1;"
                     title="YouTube video"
                     allowfullscreen
                   ></iframe>
-                </div> -->
+                </div>
               </div>
               <h5 class="mb-3">第2回TikChoco Connect</h5>
               <p class="mb-4">
-                2023年3月18日
+                2023年4月22日
               </p>
           </div>
         </section>
         <!--Section: Projects 1-->
       </div>
-
+      
         <div class="container my-5 px-5 pt-5 pb-4 shadow-3">
           <!--Section: Projects 1-->
           <section class="text-center">
             <h3 class="mb-5">過去のKeyNote</h3>
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="bg-image  mb-4 shadow-1-strong rounded">
+                  <span class="video-link demo-link" data-video-id="a2QT-10UuM8"><img
+                    src="https://img.youtube.com/vi/a2QT-10UuM8/maxresdefault.jpg"
+                    class="img-fluid shadow-2-strong"
+                  /></span>
+                  <!-- <a href="#!">
+                    <div class="mask"></div>
+                  </a> -->
+                </div>
+                <h5 class="mb-3">第2回TikChoco Connect</h5>
+                <p class="mb-4">
+                  2023年3月18日
+                </p>
+              </div>
             <div class="row">
               <div class="col-md-6 mb-4">
                 <div class="bg-image  mb-4 shadow-1-strong rounded">
