--- a/session.html
+++ b/session.html
@@ -132,10 +132,7 @@
                 <h5 class="mb-3">第2回TikChoco Connect</h5>
                 <p class="mb-4">
                   2023年3月18日
-                </p>
-              </div>
-            <div class="row">
-              <div class="col-md-6 mb-4">
+                </p></div><div class="col-md-6 mb-4">
                 <div class="bg-image  mb-4 shadow-1-strong rounded">
                   <span class="video-link demo-link" data-video-id="kJFBjG2eSuk"><img
                     src="https://img.youtube.com/vi/kJFBjG2eSuk/maxresdefault.jpg"
