--- a/speaker.html
+++ b/speaker.html
@@ -184,7 +184,7 @@ rel="stylesheet"
             <h3 class="mb-5">今回の登壇者</h3>
     
             <div class="row">
-              <div class="col-md-6 col-lg-3 mb-4">
+              <!-- <div class="col-md-6 col-lg-3 mb-4">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
                   src="avatar/IMG_0255.png"
@@ -193,7 +193,7 @@ rel="stylesheet"
                 />
                 <h5 class="mb-3">Creator Network</h5>
                 <p class="mb-0">PLANNER</p>
-              </div>
+              </div> -->
               <div class="col-md-6 col-lg-3 mb-4">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
@@ -214,7 +214,7 @@ rel="stylesheet"
                 <h5 class="mb-3">Agent 1</h5>
                 <p class="mb-0">Translator</p>
               </div> -->
-              <div class="col-md-6 col-lg-3 mb-4">
+              <!-- <div class="col-md-6 col-lg-3 mb-4">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
                   src="avatar/04d304184343cfd0faaf78b0183e490e.webp"
@@ -233,7 +233,7 @@ rel="stylesheet"
                 />
                 <h5 class="mb-3">みぽ</h5>
                 <p class="mb-0">ARTIST</p>
-              </div>
+              </div> -->
             </div>
           </section>
         </div>
