--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
         TikChoco Connectではテクノロジーとクリエイティブが積み上げてきた歴史と新たなる挑戦<br>
         注力している新技術や研究領域について多岐に渡るセッションを通じてみなさまにお届けします。</p>
 
-        <p　class="center">
+        <!-- <p　class="center">
           <span class="video-link demo-link" data-video-id="NsW53WaJEF0"><a class="button is-large is-link is-fullwidth">第4回開発進捗発表会を見よう</a></span>
-        </p>
+        </p> -->
 
         <h1 class="title is-4">お知らせ</h1>
         <ul class="news">
