--- a/speaker.html
+++ b/speaker.html
@@ -184,16 +184,7 @@ rel="stylesheet"
             <h3 class="mb-5">今回の登壇者</h3>
     
             <div class="row">
-              <!-- <div class="col-md-6 col-lg-3 mb-4">
-                <img
-                  class="rounded-circle shadow-1-strong mb-4"
-                  src="avatar/IMG_0255.png"
-                  alt="avatar"
-                  style="width: 150px;"
-                />
-                <h5 class="mb-3">Creator Network</h5>
-                <p class="mb-0">PLANNER</p>
-              </div> -->
+ 
               <div class="col-md-6 col-lg-3 mb-4">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
@@ -204,36 +195,18 @@ rel="stylesheet"
                 <h5 class="mb-3">fog</h5>
                 <p class="mb-0">PROGRAMMER</p>
               </div>
-              <!-- <div class="col-md-6 col-lg-3 mb-4">
-                <img
-                  class="rounded-circle shadow-1-strong mb-4"
-                  src="avatar/agent.jpeg"
-                  alt="avatar"
-                  style="width: 150px;"
-                />
-                <h5 class="mb-3">Agent 1</h5>
-                <p class="mb-0">Translator</p>
-              </div> -->
-              <!-- <div class="col-md-6 col-lg-3 mb-4">
-                <img
-                  class="rounded-circle shadow-1-strong mb-4"
-                  src="avatar/04d304184343cfd0faaf78b0183e490e.webp"
-                  alt="avatar"
-                  style="width: 150px;"
-                />
-                <h5 class="mb-3">ぶどう</h5>
-                <p class="mb-0">UI/UX</p>
-              </div>
               <div class="col-md-6 col-lg-3 mb-4">
                 <img
                   class="rounded-circle shadow-1-strong mb-4"
-                  src="avatar/887cfde2d0e85716b5f58ffa192ba8d6.webp"
+                  src="avatar/XfsFAlFm_400x400.jpg"
                   alt="avatar"
                   style="width: 150px;"
                 />
-                <h5 class="mb-3">みぽ</h5>
-                <p class="mb-0">ARTIST</p>
-              </div> -->
+                <h5 class="mb-3">ryuga</h5>
+                <p class="mb-0">PROGRAMMER</p>
+              </div>
+
+              </div>
             </div>
           </section>
         </div>
